<resources>
    <string name="app_name">DISCO</string>
    <string name="order_details">Order details</string>
    <string name="your_order_number">Your order number:</string>
    <string name="delivery_address">Delivery address:</string>
    <string name="total">Total:</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign in</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="join_now">JOIN NOW</string>
    <string name="welcome_to_disco_grocery">Welcome to DISCO Grocery</string>
    <string name="joinnow">JOIN NOW !</string>
    <string name="home">Home</string>
    <string name="back">BACK</string>
    <string name="place_order">Place Order</string>
    <string name="my_cart">My Cart</string>
    <string name="logout">Logout</string>
    <string name="order_history">Order History</string>
    <string name="set_location">Set Location</string>
    <string name="pay">Pay</string>

    <string-array name="prod_name">
        <item>Lady Finger</item>
        <item>Tomato</item>
        <item>Bell Pepper</item>
        <item>Chicken Wings</item>
    </string-array>
</resources>